[tool.poetry]
name = "obs_layer_sorsimple_mbaas"
version = "0.1.0"
description = "Capa lambda escritura SOR Mbaas"
authors = ["Joan Sebastian Tamayo Rivera", "Angie Marilyn Largo Guzman"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flatten-json = "^0.1.14"
jmespath = "^1.0.1"
pydantic = "^2.11.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.poetry.group.dev.dependencies]
[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
